--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "chunk-manifest-webpack-plugin": "^0.1.0",
+    "jquery": "~2.2.2",
+    "three": "~0.75.0",
+    "ts-events": "~3.1.1",
+    "ts-loader": "~0.8.1",
     "typescript": "~1.8.9",
     "typings": "~0.7.11",
-    "ts-loader": "~0.8.1",
-    "jquery": "~2.2.2",
-    "webpack": "~1.12.14",
-    "three": "~0.75.0",
-    "ts-events": "~3.1.1"
+    "webpack": "~1.12.14"
   },
   "devDependencies": {},
   "author": "",
